# fbigposter

./: .gitignore  AGENT_PROMPT.md  README.md  SKILL.md  config-schema.ts  index.ts  package-lock.json  package.json  tsconfig.json
data/: constitution.json  soul.json
data/tactics/: image-posts.json  reels.json  stories.json
mcp-browser/: browser.py  config.py  facebook_metrics.py  grok.py  inspect_deep.py  inspect_sites.py  pyproject.toml  server.py  sora.py  test_e2e_grok.py  test_e2e_grok_debug.py  test_grok_detail.py  test_grok_download.py  test_grok_generate.py  test_sora_detail_probe.py  test_sora_detail_probe2.py  test_sora_detail_probe3.py  test_sora_detail_probe4.py  test_sora_detail_probe5.py  test_sora_download_final.py  test_sora_download_final2.py  test_sora_download_final3.py  test_sora_find_submit.py  test_sora_run.py  test_sora_step1.py  test_sora_step2.py  test_sora_steps1to7.py
skills/social-media-influencer/: SKILL.md
src/: mcp-server.ts
src/__tests__/: fixtures.ts
src/analysis/: analyzer.ts  generation-log-analyzer.ts  image-posts-analyzer.ts  reels-analyzer.ts  stories-analyzer.ts
src/meta-api/: client.ts  facebook.ts  instagram.ts  metrics.ts  upload.ts
src/prompt-builder/: image-posts.ts  index.ts  reels.ts  stories.ts
src/services/: content-generator.ts  event-log.ts  metrics-collector.ts  nightly-analysis.ts  scheduler.ts
src/storage/: files.ts  paths.ts
src/tiers/: constitution.ts  soul.ts  tactics.ts
src/tools/: auth.ts  build-generation-context.ts  collect-metrics.ts  configure.ts  generate-content.ts  init.ts  (+7 more)
(+6 files in other folders)
