[project]
name = "smi-browser"
version = "1.0.0"
description = "MCP server for browser-based media generation via Grok Imagine and Sora"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "playwright",
]

[project.scripts]
smi-browser = "server:main"

[tool.setuptools]
py-modules = ["server", "browser", "config", "grok", "sora"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
